--- a/app/views/lists/show.erb
+++ b/app/views/lists/show.erb
@@ -1,5 +1,6 @@
 <% if list %>
-	<h2><%= list.name %></h2>
+	<h2 class="list-name-header"><%= list.name %> - </h2>
+  <h3 class="list-desc-header"><%= list.description %></h3><br>
 	<%= erb :'/lists/_search', locals:{movies_found: false} %>
 	<% if list.movies.count < 1 %>
 		<h3>You have not added any movies to this list.</h3>
