--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,24 +1,28 @@
- <h2>Log In</h2>
+<div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <h2>Log In</h2>
 
-  <% if @errors %>
-    <div class="ui negative message">
-      <i class="close icon"></i>
-      <div class="header">
-        There were errors accessing your account.
+    <% if @errors %>
+      <div class="ui negative message">
+        <i class="close icon"></i>
+        <div class="header">
+          There were errors accessing your account.
+        </div>
+        <p><%= @errors %></p>
       </div>
-			<p><%= @errors %></p>
-    </div>
-  <% end %>
+    <% end %>
 
-  <form class="ui form" action="/login" method="POST">
-    <div class="field">
-      <label>Email</label>
-      <input type="text" name="email" placeholder="Erlich@aviato.com">    
-    </div>
-    <div class="field">
-      <label>Password</label>
-      <input type="password" name="password" placeholder="password" >   
-    </div>
-    
-    <button class="ui button" type="submit">Log In</button>
-  </form>
+    <form class="ui form" action="/login" method="POST">
+      <div class="field">
+        <label>Email</label>
+        <input type="text" name="email" placeholder="Erlich@aviato.com">    
+      </div>
+      <div class="field">
+        <label>Password</label>
+        <input type="password" name="password" placeholder="password" >   
+      </div>
+      
+      <button class="ui button" type="submit">Log In</button>
+    </form>
+  </div>
+</div>
