--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,6 +1,29 @@
-.container {
-  width: 70%;
-  margin: 0 auto;
+html {
+  height: 100%
+}
+
+div.ui.container > div.layout.main.content > div.ui.middle.aligned.center.aligned.grid > div.column {
+    max-width: 450px;
+}
+
+.title-info {
+  height: 40px;
+  margin-top: -40px;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  position: relative;
+}
+
+.title-info > h3 {
+  font-size: 1.2em;
+  color: white;
+  margin-left: 5px;
+  z-index: 1;
+  position: relative;
+}
+
+.title-year {
+  float: right;
 }
 
 span.date {
@@ -64,3 +87,5 @@ div#list-view {
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
+
