--- a/public/css/application.css
+++ b/public/css/application.css
@@ -7,18 +7,31 @@ div.ui.container > div.layout.main.content > div.ui.middle.aligned.center.aligne
 }
 
 .title-info {
-  height: 40px;
-  margin-top: -40px;
+  height: 48px;
+  margin-top: -48px;
   background: rgba(0, 0, 0, 0.5);
   z-index: 1;
   position: relative;
 }
 
 .title-info > h3 {
+  display: inline;
   font-size: 1.2em;
   color: white;
   margin-left: 5px;
   z-index: 1;
+  position: relative;
+}
+
+.title-info > .providers-info > a > img.provider {
+  margin-top: -10px;
+  margin-left: 2px;
+  margin-right: 2px;
+  float: right;
+  display: inline;
+  width: 32px;
+  height: 32px;
+  z-index: 4;
   position: relative;
 }
 
