--- a/app/views/movies/_movies_found.erb
+++ b/app/views/movies/_movies_found.erb
@@ -1,6 +1,6 @@
 <% if movies_found %>
 
-  <div id="searched-titles" class="ui grid">
+  <div id="search-results" class="ui grid">
     <% movies_found["results"].each do |movie|%>
       <div class="movie-found four wide column">
 
@@ -10,7 +10,7 @@
                 <div class="ui dimmer">
                   <div class="content">
 
-                    <form id="add-movie-form" action="/movies" method="POST">
+                    <form id="add-to-list" action="/movies" method="POST">
                       <input type="hidden" name="id" value="<%= movie["id"] %>">
                       <input type="hidden" name="list_id" value="<%= list.id %>">
 
@@ -32,7 +32,7 @@
       </div>
     <% end %>
 <% else %>
-
-  <h3>Sorry, we did not find anything matching that title.</h3>
-
+  <div id="search-results">
+    <h3>Sorry, we did not find anything matching that title.</h3>  
+  </div>
 <% end %>
