--- a/app/views/lists/new.erb
+++ b/app/views/lists/new.erb
@@ -1,4 +1,4 @@
-<div id="new-form" class="ui modal">
+<div id="new-form" class="ui basic modal">
   <i class="close icon"></i>
   <div class="header">
     Create a new List
