--- a/app/views/movies/_movies_found.erb
+++ b/app/views/movies/_movies_found.erb
@@ -1,6 +1,6 @@
 <% if movies_found %>
 
-  <div id="search-results" class="ui grid ">
+  <div id="search-results" class="ui grid search-results">
     <% movies_found["results"].each do |movie|%>
       <div class="movie-found four wide column">
 
