--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -6,7 +6,7 @@
   	<a id="new-list" class="new-list" href="/lists/new"><i class="bordered inverted green plus icon" ></i></a>
 	</div>
 	
-	<%= erb :'/lists/new' %>
+	<%= erb :'/lists/_new' %>
 
 	<div class="list-container">
 		
