--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,13 +1,12 @@
-.reset-height {
-  height: 100%
-}
 
 div.ui.container > div.layout.main.content > div.ui.middle.aligned.center.aligned.grid > div.column {
     max-width: 450px;
 }
 
 .owl-container {
+  margin: 0 auto;
   margin-bottom: 40px;
+  width: 92%;
 }
 
 .owl-carousel {
@@ -62,6 +61,9 @@ div.ui.container > div.layout.main.content > div.ui.middle.aligned.center.aligne
   color: #555555;
 }
 
+.owl-nav {
+  z-index: -1;
+}
 
 .list-header {
   margin-top: 20px;
@@ -175,4 +177,8 @@ div#list-view {
   margin-bottom: 50px;
 }
 
+.ui.basic.modal.confirm-delete > .content > p {
+  text-align: center;
+  font-size: 2em;
+}
 
