--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -20,8 +20,8 @@
       <% if current_user %>
         <div class="item">
           <div class="ui icon input">
-            <input type="text" placeholder="Search...">
-            <i class="search icon"></i>
+            <input class="global-search" type="text" placeholder="Search..." href="">
+            <i class="search icon global"></i>
           </div>
         </div>   
       <% end %>   
