--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,17 @@
+
 <h2>This be da index/homepage</h2>
 
+<% if current_user && new_lists.any? %>
+	<% new_lists.each do |list| %>
+		
+		<%= erb :'/lists/_show', locals: {list: list} %>
+		
+	<% end %>
+
+	<% if new_movies.any? %>
+		<% new_movies.each do |lm| %>
+			<%= lm.movie.title %>
+		<% end %>
+	<% end %>
+
+<% end %>
