--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -52,9 +52,10 @@
   </div>
 
   <script src="/js/jquery.js"></script>
-
+  <script src="/js/timeago/timeago.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
   <script src="/js/owl/owl.carousel.min.js"></script>
+  <script src="/js/mousewheel/jquery.mousewheel.min.js"></script>
   <script src="/js/application.js"></script>
 
 
