--- a/app/views/users/_profile_header.erb
+++ b/app/views/users/_profile_header.erb
@@ -1,19 +1,29 @@
-<div class="ui padded segment">
+<div class="ui grid profile-header">
+	<div class="six wide column user-info">
+		<% if current_user.id == user.id %>
+			<h1>Welcome, <%= current_username %>!</h1>
+			<h2>add edit button</h2>
+		<% else %>
+			<h1><%= user.username %>'s lists</h1>
+		<% if !current_user.is_following?(user) %>	
+			<button id="follow-user" class="ui blue button" data-user-id="<%= user.id %>">Follow</button>
+		<% else %>
+			<button id="unfollow-user" class="ui basic button" data-user-id="<%= user.id %>">Following</button>
+		<% end %>
+		<% end %>
+	</div>
 
-	<div class="profile-header">
- 	<% if current_user.id == user.id %>
-		<h1>Welcome, <%= current_username %>!</h1>
-		<h2>add edit profile button</h2>
-	<% else %>
-		<h1><%= user.username %>'s lists</h1>
-	<% if !current_user.is_following?(user) %>	
-		<button id="follow-user" class="ui blue button" data-user-id="<%= user.id %>">Follow</button>
-	<% else %>
-		<button id="unfollow-user" class="ui basic button" data-user-id="<%= user.id %>">Following</button>
-	<% end %>
-	<% end %>
-		<h4 class='follower-count'><%= user.followers.count %> Followers</h4>
-		<h4 class='following-count'><%= user.following.count %> Following</h4>
-
+	<div class="ten wide column ui grid user-stats">
+		<div class="three wide column list-stats">
+			<h4 class='list-count'><%= user.lists.count %> <span>Lists</span></h4>
+		</div>
+		<div class="three wide column follow-stats follower-stats" data-url="/users/<%= user.id %>/followers">
+			<h4 class='follower-count'><%= user.followers.count %> <span>Followers</span></h4>
+		</div>
+		<div class="three wide column follow-stats following-stats" data-url="/users/<%= user.id %>/following">
+			<h4 class='following-count'><%= user.following.count %> <span> Following</span></h4>
+		</div>
 	</div>
 </div>
+
+<div class="follow-stats-view"></div>
